<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Aersia VIP Player</string>
    <string name="action_settings">Settings</string>
    <string name="action_quit">Quit</string>
    <string name="action_shuffle">Shuffle</string>
    <string name="playlist_vip">VIP</string>
    <string name="playlist_mellow">VIP Mellow</string>
    <string name="playlist_exiled">VIP Exiled</string>
    <string name="playlist_source">VIP Source</string>
    
	<string name="music_play">Play</string>
	<string name="music_pause">Pause</string>
	<string name="music_prev">Prev</string>
	<string name="music_next">Next</string>
	<string name="music_time_zero">0:00</string>
	<string name="music_time_delimeter">/</string>
    
</resources>
